fix: change item gap
I changed the gap between the items from 36px to 32px/

Self-check:
- yes
- yes
- yes
- yes
- yes
- yes
- yes

--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -11,7 +11,7 @@ ul { /**/
   display: flex;
   margin: 0;
   padding: 0;
-  gap: 56px;
+  gap: 52px;
   list-style-type: none;
 }
 
